<resources>
    <string name="app_name">HotelManagement</string>
    <string name="text">ahsdg sdfwufvbsdfhge hf fhjkdhueiya  edfd dfgdf</string>
    <string name="name">name</string>
    <string name="send">Send</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="user_id">Email/User Id</string>
    <string name="password">Password</string>
    <string name="as_author">As Manager</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="register_now">Not a member?</string>
    <string name="sign_up">Sign Up.</string>
    <string name="items">Items</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">price</string>
    <string name="hotel_item">Hotel Item</string>
    <string name="total_price">total price</string>
    <string name="select_quantity">Select quantity</string>
    <string name="add_to_order">Add to Cart</string>
    <string name="x">X</string>
    <string name="order_now">Order Now</string>
    <string name="served">Served</string>
    <string name="accepted">Accepted</string>
    <string name="order_detail">Order detail</string>
    <string name="table_no">Table No</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resister">Resister and Login</string>
    <string name="user_name">User Name</string>
</resources>
