<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    tools:context="com.team.speedcoders.hotelmanagement.ItemList.DetailFragment">


    <ImageView
        android:id="@+id/detailFoodImage"
        android:src="@drawable/rsz_american_chosuye"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:scaleType="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/hotel_item" />

    <TextView
        android:id="@+id/detailName"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/detailFoodImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/detailPrice"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailName"
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/select_quantity"
        app:layout_constraintTop_toBottomOf="@id/detailPrice"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/detailResView"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/textarea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/detailTotalPrice"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/detailResView" />


    <Button
        android:id="@+id/buyNow"
        app:layout_constraintTop_toBottomOf="@id/detailTotalPrice"
        android:text="@string/add_to_order"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/cancle"
        android:background="@color/trans_red"
        android:text="@string/x"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
