<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp">

    <TextView
        android:id="@+id/orderTableNo"
        android:padding="3dp"
        android:background="@color/trans_red"
        android:text="@string/table_no"
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/orderDetail"
        android:paddingTop="8dp"
        android:paddingBottom="15dp"
        android:text="@string/order_detail"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderTableNo"/>

    <android.support.constraint.Guideline
        android:id="@+id/orderGuideLine"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/orderAccepted"
        android:text="@string/accepted"
        android:textAllCaps="false"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/orderDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/orderGuideLine"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/orderServed"
        android:text="@string/served"
        android:layout_width="0dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/orderDetail"
        app:layout_constraintStart_toStartOf="@id/orderGuideLine"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>