<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.team.speedcoders.hotelmanagement.RegisterActivity.RegisterActivity">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/startLine"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/endLine"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/startLine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"/>

    <EditText
        android:id="@+id/UserNameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="@id/UserName"
        app:layout_constraintTop_toBottomOf="@id/UserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/endLine" />

    <TextView
        android:id="@+id/userId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        app:layout_constraintLeft_toLeftOf="@id/UserName"
        app:layout_constraintTop_toBottomOf="@id/UserNameField" />

    <EditText
        android:id="@+id/userIdField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@id/UserName"
        app:layout_constraintTop_toBottomOf="@id/userId"
        app:layout_constraintRight_toRightOf="@id/UserNameField" />

    <TextView
        android:id="@+id/userPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintLeft_toLeftOf="@id/UserName"
        app:layout_constraintTop_toBottomOf="@id/userIdField" />

    <EditText
        android:id="@+id/userPWField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@id/userPW"
        app:layout_constraintTop_toBottomOf="@id/userPW"
        app:layout_constraintRight_toRightOf="@id/UserNameField" />

    <TextView
        android:id="@+id/userConfermPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        app:layout_constraintLeft_toLeftOf="@id/UserName"
        app:layout_constraintTop_toBottomOf="@id/userPWField" />

    <EditText
        android:id="@+id/userConfertPWField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@id/userPW"
        app:layout_constraintTop_toBottomOf="@id/userConfermPW"
        app:layout_constraintRight_toRightOf="@id/UserNameField" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resister"
        android:id="@+id/register"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="@id/userPWField"
        app:layout_constraintLeft_toLeftOf="@id/startLine"
        app:layout_constraintTop_toBottomOf="@+id/userConfertPWField"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/registerNowText"
        android:clickable="true"
        android:text="@string/already_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintLeft_toLeftOf="@+id/startLine"
        app:layout_constraintRight_toLeftOf="@+id/endLine"
        app:layout_constraintHorizontal_bias="0.4" />

    <TextView
        android:id="@+id/signIn"
        android:clickable="true"
        android:text="@string/sign_in"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintLeft_toRightOf="@id/registerNowText"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />


</android.support.constraint.ConstraintLayout>
