<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context="com.team.speedcoders.hotelmanagement.LogInActivity.LoginActivity">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/startLine"
        app:layout_constraintGuide_percent="0.08" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/endLine"
        app:layout_constraintGuide_percent="0.92" />


    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        app:layout_constraintLeft_toLeftOf="@+id/startLine"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.22" />

    <EditText
        android:id="@+id/userIdField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@+id/startLine"
        app:layout_constraintTop_toBottomOf="@+id/userId"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/endLine"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/userPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/userIdField"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/startLine" />

    <EditText
        android:id="@+id/userPWField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/userPW"
        android:layout_marginTop="-1dp"
        app:layout_constraintRight_toLeftOf="@+id/endLine"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/startLine" />

    <CheckBox
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/as_author"
        app:layout_constraintLeft_toLeftOf="@+id/startLine"
        app:layout_constraintTop_toBottomOf="@+id/userPWField"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/login"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="@+id/startLine"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintRight_toLeftOf="@+id/endLine"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/registerNowText"
        android:clickable="true"
        android:text="@string/register_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias=".4"
        app:layout_constraintTop_toBottomOf="@+id/author"/>

    <TextView
        android:id="@+id/registerNow"
        android:clickable="true"
        android:text="@string/sign_up"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintLeft_toRightOf="@+id/registerNowText"
        android:layout_marginStart="3dp" />

</android.support.constraint.ConstraintLayout>
